# ex1

./: CMakeLists.txt  DataSet.cpp  Distance.cpp  Distance.h  KNN.cpp  Knn.cpp  Knn.h  MakeDataSet.cpp  ParseAndValidate.cpp  ParseAndValidate.h  README.md  ReadDataSet.cpp  ReadDataSet.h  client.cpp  ex1_part2.cpp  main.cpp  makefile  program.cpp  server.cpp
